--- a/onlineTutorial/templates/physics.html
+++ b/onlineTutorial/templates/physics.html
@@ -113,11 +113,11 @@
       <div class="modal-body ">
         
         <div class="d-flex justify-content-between">
-          <iframe id="yt-player" width="560" height="315" src="https://www.youtube.com/embed/M7lc1UVf-VE?enablejsapi=1" title="Rkeduv Tutorial" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe id="{{data.contentId}}" width="560" height="315" src="{{data.fileUrl}}" title="Rkeduv Tutorial" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" onclick="playerpause()">back</button>
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" onclick="playerpause('{{data.contentId}}')">back</button>
       </div>
     </div>
   </div>
@@ -149,51 +149,10 @@
 {% for data in contentData %}
 {% if data.dataType == "vid" %}
 <script type="text/javascript">
-  // $("#modal{{data.contentId}}").on('hidden.bs.modal', function () {
-  //       alert("I ama alive");
-  //       player.pauseVideo();
-  //   });
-
-  var tag = document.createElement('script');
-  tag.id = 'iframe-demo';
-  tag.src = 'https://www.youtube.com/iframe_api';
-  var firstScriptTag = document.getElementsByTagName('script')[0];
-  firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
-  var player;
-  function onYouTubeIframeAPIReady() {
-    player = new YT.Player('yt-player', {
-        events: {
-          'onReady': onPlayerReady,
-          'onStateChange': onPlayerStateChange
-        }
-    });
-  }
-  function onPlayerReady(event) {
-    document.getElementById('yt-player').style.borderColor = '#FF6D00';
-  }
-  function changeBorderColor(playerStatus) {
-    var color;
-    if (playerStatus == -1) {
-      color = "#37474F"; // unstarted = gray
-    } else if (playerStatus == 0) {
-      color = "#FFFF00"; // ended = yellow
-    } else if (playerStatus == 1) {
-      color = "#33691E"; // playing = green
-    } else if (playerStatus == 2) {
-      color = "#DD2C00"; // paused = red
-    } else if (playerStatus == 3) {
-      color = "#AA00FF"; // buffering = purple
-    } else if (playerStatus == 5) {
-      color = "#FF6DOO"; // video cued = orange
-    }
-    if (color) {
-      document.getElementById('yt-player').style.borderColor = color;
-    }
-  }
-  function onPlayerStateChange(event) {
-    changeBorderColor(event.data);
-  }
-  function playerpause(){
+  var player;  
+  function playerpause(id){
+    player = new YT.Player(id);
+    console.log("working")
     player.pauseVideo();
   }
   </script>
