--- a/onlineTutorial/templates/resetpass.html
+++ b/onlineTutorial/templates/resetpass.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.83.1">
-    <title>Sign In Rkeduv</title>
+    <title>Change Password</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/sign-in/">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
@@ -15,8 +15,6 @@
     
 
     <!-- Bootstrap core CSS -->
-
-
     <style>
       .bd-placeholder-img {
         font-size: 1.125rem;
@@ -40,16 +38,12 @@
   <body class="text-center">
     
     <main class="form-signin border">
-        <form action="/accounts/forgotpassword/" method="POST">
+        <form action="/accounts/resetpass/" method="POST">
             {% csrf_token %}
             <img class="mb-4" src="{% static 'logos/RK5.png' %}" alt="" width="72">
-            <h4 class="h4 mb-3 fw-normal">Account Recovery</h4>
+            <h4 class="h4 mb-3 fw-normal">Change password</h4>
             {{form.as_p}}
-            <button class="w-100 btn btn-primary mb-3" type="submit">Submit</button>
-            <div class="d-flex justify-content-end">
-                 <p>Or</p><a class="mx-1" href="/accounts/login/">Login</a>
-            </div>
-            
+            <button class="w-100 btn btn-primary mb-3" type="submit">Save password</button>          
             <p class="mt-5 mb-3 text-muted">&copy; 2017–2021</p>
         </form>
     </main>
