--- a/onlineTutorial/templates/startexam.html
+++ b/onlineTutorial/templates/startexam.html
@@ -51,7 +51,7 @@
                                 <!-- textarea for QA question -->
                                 <div class="form-group">
                                     <label for="exampleFormControlTextarea1">Type your answer here :</label>
-                                    <textarea class="form-control" name="question{{question.index}}" id="exampleFormControlTextarea1" rows="5" cols="100"></textarea>
+                                    <textarea class="qa_question form-control"  name="qa_question{{question.index}}" id="qa_question{{question.index}}" rows="5" cols="100"></textarea>
                                 </div>
                                 <!-- textarea for QA question END -->
                             </div>
@@ -59,22 +59,22 @@
                             {% if question.type == 'normal_mcq' %}
                             <div class="d-flex justify-content-around pb-2 options">
                                 <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="question{{question.index}}" id="exampleRadios1" value="A" >
+                                    <input class="normal_mcq form-check-input" type="radio" name="question{{question.index}}" id="exampleRadios1" value="A" >
                                     <label class="form-check-label" for="exampleRadios1">A</label>
                                 </div>
                             
                                 <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="question{{question.index}}" id="exampleRadios2" value="B" >
+                                    <input class="normal_mcq form-check-input" type="radio" name="question{{question.index}}" id="exampleRadios2" value="B" >
                                     <label class="form-check-label" for="exampleRadios2">B</label>
                                 </div>
                             
                                 <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="question{{question.index}}" id="exampleRadios3" value="C" >
+                                    <input class="normal_mcq form-check-input" type="radio" name="question{{question.index}}" id="exampleRadios3" value="C" >
                                     <label class="form-check-label" for="exampleRadios3">C</label>
                                 </div>
                             
                                 <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="question{{question.index}}" id="exampleRadios4" value="D" >
+                                    <input class="normal_mcq form-check-input" type="radio" name="question{{question.index}}" id="exampleRadios4" value="D" >
                                     <label class="form-check-label" for="exampleRadios4">D</label>
                                 </div>
                                    
@@ -84,28 +84,28 @@
                             <div class="d-flex justify-content-around pb-2 options">
                                 
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" name="question{{question.index}}1" value="A" id="defaultCheck1">
+                                    <input class="multiselectoption form-check-input" type="checkbox" name="question{{question.index}}1" value="A" id="defaultCheck1">
                                     <label class="form-check-label" for="defaultCheck1">
                                       A
                                     </label>
                                   </div>
                                 
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" name="question{{question.index}}2" value="B" id="defaultCheck2">
+                                    <input class="multiselectoption form-check-input" type="checkbox" name="question{{question.index}}2" value="B" id="defaultCheck2">
                                     <label class="form-check-label" for="defaultCheck2">
                                       B
                                     </label>
                                   </div>
                                 
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" name="question{{question.index}}3" value="C" id="defaultCheck3">
+                                    <input class="multiselectoption form-check-input" type="checkbox" name="question{{question.index}}3" value="C" id="defaultCheck3">
                                     <label class="form-check-label" for="defaultCheck3">
                                      C
                                     </label>
                                   </div>
                                 
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" name="question{{question.index}}4" value="D" id="defaultCheck4">
+                                    <input class="multiselectoption form-check-input" type="checkbox" name="question{{question.index}}4" value="D" id="defaultCheck4">
                                     <label class="form-check-label" for="defaultCheck4">
                                       D
                                     </label>
