--- a/onlineTutorial/templates/index.html
+++ b/onlineTutorial/templates/index.html
@@ -48,7 +48,10 @@
         <a class="nav-link " href="accounts/login/" aria-current="page" style="color: black;">Login</a>
         {% endif %}
         {% if user.is_admin %}
-        <a class="nav-link " href="accounts/circular/" aria-current="page" style="color: black;">Circular</a>
+        <a class="nav-link " href="admin/" aria-current="page" style="color: black;">Admin</a>
+        {% endif %}
+        {% if not user.fees %}
+        <a class="nav-link " href="finance/" aria-current="page" style="color: black;">Fees</a>
         {% endif %}
       </nav>
     </div>
