--- a/onlineTutorial/templates/physics.html
+++ b/onlineTutorial/templates/physics.html
@@ -108,12 +108,12 @@
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="exampleModalLabel">{{data.title}}</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" onclick="playerpause()"></button>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" onclick="playerpause('{{data.contentId}}')"></button>
       </div>
       <div class="modal-body ">
         
         <div class="d-flex justify-content-between">
-          <iframe id="yt-player" width="560" height="315" src="{{data.fileUrl}}" title="Rkeduv Tutorial" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe id="{{data.contentId}}" width="560" height="315" src="{{data.fileUrl}}" title="Rkeduv Tutorial" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </div>
       <div class="modal-footer">
@@ -129,13 +129,13 @@
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="exampleModalLabel">{{data.title}}</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="pause-button12"></button>
       </div>
       <div class="modal-body " >
-        <iframe  src="{{data.fileUrl}}" width="100%" height="100%" allow="autoplay"></iframe>
+        <iframe  src="{{data.fileUrl}}?enablejsapi=1&html5=1" id="video-{{data.contentId}}" onload="onYouTubePlayerAPIReady('video-{{data.contentId}}')" width="100%" height="100%" allow="autoplay"></iframe>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" id="pause-button">Close</button>
       </div>
     </div>
   </div>
@@ -146,18 +146,37 @@
 
 {% block js %}
 
-{% for data in contentData %}
-{% if data.dataType == "vid" %}
+
 <script type="text/javascript">
-  var player;  
-  function playerpause(id){
-    player = new YT.Player(id);
-    console.log("working")
+  var player;
+
+// this function gets called when API is ready to use
+function onYouTubePlayerAPIReady(id) {
+  // create the global player from the specific iframe (#video)
+  player = new YT.Player(String(id), {
+    events: {
+      // call this function when player is ready to use
+      'onReady': onPlayerReady
+    }
+  });
+  console.log(id);
+}
+
+function onPlayerReady(event) {
+
+  var pauseButton = document.getElementById("pause-button");
+  pauseButton.addEventListener("click", function() {
     player.pauseVideo();
-  }
-  </script>
-{% endif %}
-{% endfor %}
+  });
+
+}
+
+// Inject YouTube API script
+var tag = document.createElement('script');
+tag.src = "//www.youtube.com/player_api";
+var firstScriptTag = document.getElementsByTagName('script')[0];
+firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+</script>
 <script type="text/javascript" src="{% static 'js/sidebars.js' %}"></script> 
 {% endblock %}
 
