--- a/onlineTutorial/templates/startexam.html
+++ b/onlineTutorial/templates/startexam.html
@@ -13,11 +13,11 @@
   </head>
   <body>
 
-    <div class="overlay" id="overlay">
+    <!-- <div class="overlay" id="overlay">
       <h1>
         Please Use Chrome Brower Only
       </h1>
-    </div>
+    </div> -->
 
     <div class="main">
       <input type="hidden" name="" id="startTime" value="{{exam_details.time}}">
@@ -84,28 +84,28 @@
                             <div class="d-flex justify-content-around pb-2 options">
                                 
                                 <div class="form-check">
-                                    <input class="multiselectoption form-check-input" type="checkbox" name="question{{question.index}}1" value="A" id="defaultCheck1">
+                                    <input class="multiselectoption form-check-input" type="checkbox" name="multiselect_question{{question.index}}1" value="A" id="defaultCheck1">
                                     <label class="form-check-label" for="defaultCheck1">
                                       A
                                     </label>
                                   </div>
                                 
                                 <div class="form-check">
-                                    <input class="multiselectoption form-check-input" type="checkbox" name="question{{question.index}}2" value="B" id="defaultCheck2">
+                                    <input class="multiselectoption form-check-input" type="checkbox" name="multiselect_question{{question.index}}2" value="B" id="defaultCheck2">
                                     <label class="form-check-label" for="defaultCheck2">
                                       B
                                     </label>
                                   </div>
                                 
                                 <div class="form-check">
-                                    <input class="multiselectoption form-check-input" type="checkbox" name="question{{question.index}}3" value="C" id="defaultCheck3">
+                                    <input class="multiselectoption form-check-input" type="checkbox" name="multiselect_question{{question.index}}3" value="C" id="defaultCheck3">
                                     <label class="form-check-label" for="defaultCheck3">
                                      C
                                     </label>
                                   </div>
                                 
                                 <div class="form-check">
-                                    <input class="multiselectoption form-check-input" type="checkbox" name="question{{question.index}}4" value="D" id="defaultCheck4">
+                                    <input class="multiselectoption form-check-input" type="checkbox" name="multiselect_question{{question.index}}4" value="D" id="defaultCheck4">
                                     <label class="form-check-label" for="defaultCheck4">
                                       D
                                     </label>
