--- a/onlineTutorial/templates/checkout.html
+++ b/onlineTutorial/templates/checkout.html
@@ -4,6 +4,7 @@
   </head>
   <body>
     <form action="/finance/create-checkout-session" method="POST">
+	<p>Proceed here  to pay the fees.<p>
       {% csrf_token %}
       <button type="submit">Pay Now</button>
     </form>
