--- a/onlineTutorial/templates/index.html
+++ b/onlineTutorial/templates/index.html
@@ -52,6 +52,8 @@
         {% endif %}
         {% if not user.fees %}
         <a class="nav-link " href="finance/" aria-current="page" style="color: black;">Fees</a>
+	{% else %}
+	<a class="nav-link " href="examinations/" aria-current ="page" style="color:black;">Examinations</a>
         {% endif %}
       </nav>
     </div>
