--- a/onlineTutorial/templates/result.html
+++ b/onlineTutorial/templates/result.html
@@ -7,7 +7,7 @@
 
 {% endblock %}
 {%block content%}
-
+<h6>Result:  {{finalresult}}</h6>
 <div class="container">
     <table class="table table-striped" style="width:100%" name="1" id="teranaam">
         <thead>
