--- a/onlineTutorial/templates/courses.html
+++ b/onlineTutorial/templates/courses.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Bootstrap 5 Side Bar Navigation</title>
+  <title>{{activeChapter}} | Topics</title>
   <!-- bootstrap 5 css -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous" />
   <!-- BOX ICONS CSS-->
@@ -31,7 +31,7 @@
                 <div class="card card-body">
                     <a href="/physics/chapterId={{chapter.chapterId}}/">
                         <i class="bx bxs-dashboard"></i>
-                        <span class="mx-0">LECTURE</span>
+                        <span class="mx-0">Lectures</span>
                     </a>
                 </div>
                 <div class="card card-body">
@@ -63,7 +63,7 @@
                 <div class="card card-body">
                     <a href="/physics/chapterId={{chapter.chapterId}}/">
                         <i class="bx bxs-dashboard"></i>
-                        <span class="mx-0">LECTURE</span>
+                        <span class="mx-0">Lectures</span>
                     </a>
                 </div>
                 <div class="card card-body">
@@ -106,26 +106,23 @@
         <li class="nav-item">
           <a class="nav-link link-light" href="/">Home</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link link-light" href="/finance/user-plan/">Change Plan</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled link-light" href="#">Physics</a>
-        </li>
+        {% if request.user.is_authenticated %}
         <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle link-light" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 <i class="bi bi-person-fill"></i> Accounts
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="/accounts/profile/">My Profile</a></li>
+              <li><a class="dropdown-item" href="/finance/user-plan/">Change Plan</a></li>
               <li><a class="dropdown-item" href="/accounts/changepassword/">Change Password</a></li>
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="/accounts/logout/">Logout</a></li>
-              
             </ul>
           </li>
-      </li>
-        
+          {% else %}
+          <li class="nav-item"><a href="/accounts/login/" class="nav-link link-light">Login</a></li>
+          <li class="nav-item"><a href="/accounts/register/" class="nav-link link-light">Register</a></li>
+          {% endif %}
+      </li> 
       </ul>
     </nav>
     <!--End Top Nav -->
