--- a/onlineTutorial/templates/courses.html
+++ b/onlineTutorial/templates/courses.html
@@ -67,19 +67,19 @@
                     </a>
                 </div>
                 <div class="card card-body">
-                    <a href="/">
+                    <a href="/physics/ncert/">
                         <i class="bx bxs-dashboard"></i>
                         <span class="mx-0">NCERT</span>
                     </a>
                 </div>
                 <div class="card card-body">
-                    <a href="#">
+                    <a href="/physics/hcverma/">
                         <i class="bx bxs-dashboard"></i>
                         <span class="mx-0">H C Verma</span>
                     </a>
                 </div>
                 <div class="card card-body">
-                    <a href="#">
+                    <a href="/physics/practicepaper/">
                         <i class="bx bxs-dashboard"></i>
                         <span class="mx-0">Practice Paper</span>
                     </a>
