--- a/onlineTutorial/templates/data.html
+++ b/onlineTutorial/templates/data.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Bootstrap 5 Side Bar Navigation</title>
+  <title>Rkeduv | {{activeTopic.topicName}}</title>
   <!-- bootstrap 5 css -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous" />
   <!-- BOX ICONS CSS-->
@@ -39,19 +39,19 @@
                     </a>
                 </div>
                 <div class="card card-body">
-                    <a href="/">
+                    <a href="/physics/ncert/">
                         <i class="bx bxs-dashboard"></i>
                         <span class="mx-0">NCERT</span>
                     </a>
                 </div>
                 <div class="card card-body">
-                    <a href="#">
+                    <a href="/physics/hcverma/">
                         <i class="bx bxs-dashboard"></i>
                         <span class="mx-0">HC Verma</span>
                     </a>
                 </div>
                 <div class="card card-body">
-                    <a href="#">
+                    <a href="/physics/practicepaper/">
                         <i class="bx bxs-dashboard"></i>
                         <span class="mx-0">Practice Paper</span>
                     </a>
@@ -125,7 +125,7 @@
       </ul>
     </nav>
     <!--End Top Nav -->
-    <h2 class="heading text-center mt-3">SECOND</h2>
+    <h2 class="heading text-center mt-3">{{activeTopic.topicName}}</h2>
     <div class="swiper mySwiper">
         <div class="swiper-wrapper">
             {% for content in allContent %}
