--- a/onlineTutorial/templates/userplans.html
+++ b/onlineTutorial/templates/userplans.html
@@ -62,6 +62,26 @@
   </div>
 
   <div class="row flex-items-xs-middle flex-items-xs-center mt-5">
+
+    {% if tryPlatform %}
+    <div class="col-xs-12 col-lg-4">
+      <div class="card text-xs-center p-5">
+        <div class="card-header">
+          <h6 class="display-2"><span class="currency">₹</span>0</h6>
+        </div>
+        <div class="card-block">
+          <h4 class="card-title"> 
+            Try Now
+          </h4>
+          <ul class="list-group">
+            <li class="list-group-item">Lectures Video/Notes</li>
+            <li class="list-group-item">Validity 3 Days</li>
+          </ul>
+          <a href="/finance/trynow/" class="btn btn-gradient mt-2">Try Now</a>
+        </div>
+      </div>
+    </div>
+    {% endif %}
       
           <!-- Table #1  -->
     {% for plan in allPlans %}
@@ -80,7 +100,9 @@
           </h4>
                 <ul class="list-group">
                   <li class="list-group-item">Lectures Video/Notes</li>
+                  {% if plan.ncert %}
                   <li class="list-group-item">Ncert Solutions Videos</li>
+                  {% endif %}
                   {% if plan.hcverma %} 
                   <li class="list-group-item">HC Verma Solutions Videos</li>
                   {% endif %}
@@ -101,25 +123,7 @@
           </div>
       {% endfor %}
           <!-- Table #1  -->
-          <!-- <div class="col-xs-12 col-lg-4">
-            <div class="card text-xs-center p-5">
-              <div class="card-header">
-                <h6 class="display-2"><span class="currency">₹</span>500<span class="period">/month</span></h6>
-              </div>
-              <div class="card-block">
-                <h4 class="card-title"> 
-                  Regular Plan
-                </h4>
-                <ul class="list-group">
-                  <li class="list-group-item">Lectures Video/Notes</li>
-                  <li class="list-group-item">Ncert Solutions Videos</li>
-                  <li class="list-group-item">HC Verma Solutions Videos</li>
-                  <li class="list-group-item">Monthly 1 Mock Test</li>
-                </ul>
-                <a href="#" class="btn btn-gradient mt-2">Buy Now</a>
-              </div>
-            </div>
-          </div> -->
+          <!--  -->
       
           <!-- Table #1  -->
           <!-- <div class="col-xs-12 col-lg-4">
